--- a/lang/en.json
+++ b/lang/en.json
@@ -1,21 +1,214 @@
 {
-    "CAMPAIGN_CODEX.settings.itemPricePath.name": "Override Item Price Path",
-    "CAMPAIGN_CODEX.settings.itemPricePath.hint": "Path to item price value (e.g., 'system.price.value' for D&D5e). Leave blank to use detected system.",
-    "CAMPAIGN_CODEX.settings.itemDenominationPath.name": "Override Item Currency Path",
-    "CAMPAIGN_CODEX.settings.itemDenominationPath.hint": "Path to item currency denomination (e.g., 'system.price.denomination' for D&D5e). Leave blank to use detected system.",
-    "CAMPAIGN_CODEX.settings.itemDenominationOverride.name": "Override Denomination",
-    "CAMPAIGN_CODEX.settings.itemDenominationOverride.hint": "Currency Denomination (e.g., credits, gp, units). Leave blank to use Item Currency Path or detected system. Campaign Codex will automatically detect the value and denomination for items based on the active game system (e.g., Dungeons and Dragons 5e, Pathfinder 2e, Starfinder, Savage Worlds Adventure Edition, Pathfinder 1e, Old-School Essentials and Daggerheart).",
-    "CAMPAIGN_CODEX.settings.hideBaseCost.name": "Hide the Base cost column",
-    "CAMPAIGN_CODEX.settings.hideBaseCost.hint": "If you don't want the base cost visible, or the system doesn't have a price path you can set this to hide the column in the inventory tab. Close and reopen sheets to update.",
-    "CAMPAIGN_CODEX.settings.sortCardsAlpha.name": "Automatically sort cards alphabetically",
-    "CAMPAIGN_CODEX.settings.sortCardsAlpha.hint": "If On, cards will be displayed A-Z",
-    "CAMPAIGN_CODEX.settings.runonlyonce.name": "Welcome Message - Disabled",
-    "CAMPAIGN_CODEX.settings.runonlyonce.hint": "If On, you won't see the Welcome message",
-    "CAMPAIGN_CODEX.settings.useOrganizedFolders.name": "Organise in Folders",
-    "CAMPAIGN_CODEX.settings.useOrganizedFolders.hint": "Automatically create and organise Campaign Codex journals in folders",
-    "CAMPAIGN_CODEX.settings.hideByPermission.name": "Hide Cards by ownership",
-    "CAMPAIGN_CODEX.settings.hideByPermission.hint": "Hide cards if the user does not have observer or higher ownership of the journal or item",
-    "CAMPAIGN_CODEX.settings.resetItemPathsButton.name": "Reset Item Paths to Defaults",
-    "CAMPAIGN_CODEX.settings.resetItemPathsButton.hint": "Enable this option and save to reset item price and currency paths to D&D5e defaults (system.price.value and system.price.denomination)",
-    "CAMPAIGN_CODEX.notifications.itemPricePathsReset": "Item price paths reset to D&D5e defaults"
+  "CAMPAIGN_CODEX": {
+    "welcomePageHTML" : "<div> <p><strong>Welcome to Campaign Codex</strong></p> <p>Folder management, system item price location and system item currency location can be changed in settings.</p> <div><button data-campaign-codex-handler=\"campaign-codex|openMenu|core_settings\"><i class=\"fas fa-wrench\"></i>Settings</button></div> <hr> <p><strong>Be part of the Campaign Codex Community</strong></p> <p>If you would like to suggest a feature, report a bug, or just want to chat, feel free to join us on Discord.</p> <div><button data-campaign-codex-handler=\"campaign-codex|openWindow|https://discord.gg/fycwH79s2y\"><i class=\"fab fa-discord\"></i> Join Discord</button></div> <p><strong>Found a bug?</strong></p> <p>If you would like to report a bug and Discord is not your thing head on over to GitHub.</p> <div><button data-campaign-codex-handler=\"campaign-codex|openWindow|https://github.com/xthesaintx/cc13\"><i class=\"fas fa-bug\"></i> Report a Bug</button></div> <p><strong>Supporting the development</strong></p> <p>If you want to support the development, consider taking a look at the membership options on Patreon</a>.</p> <div><button data-campaign-codex-handler=\"campaign-codex|openWindow|https://patreon.com/wgtngm\"><i class=\"fas fa-star\"></i> Become a member</button></div></div>",   
+    "context":{
+        "export":"Export to Standard Journal",
+        "group":"Add to {type}"
+    },
+    "button":{
+        "title":"Create new {type}",
+        "droptoscene" : "Drop  {type} to current scene",
+        "tagmode": "Tag Mode"
+    },
+    "info":
+    {
+        "automatically":"{type} are automatically populated from all {source}.",
+        "refresh":"Refresh",
+        "linkfound":"Linking existing {type}.",
+        "newlink":"Created and linked {type} from the scene.",
+        "linked":"Linked {type}"
+    },
+    "sheet":{
+      "journal": "{type} Journal"
+    },
+    "add":"Add {type}",
+    "group": {
+      "notfound":"The item you are trying to add could not be found.",
+      "self":"A group cannot be added to itself."
+    },
+    "member": {
+      "type":"Member {type}"
+    },
+    "heading": {
+      "in":"{type} {in}"
+    },
+    "names": {
+      "regionlocation": "Region or Location",
+      "location": "Location",
+      "locations": "Locations",
+      "group": "Group",
+      "groups": "Groups",
+      "shop": "Entry",
+      "shops": "Entries",
+      "region": "Region",
+      "regions": "Regions",
+      "npc": "NPC",
+      "npcs": "NPCs",
+      "items": "Items",
+      "journal": "Journal",
+      "journals": "Journals",
+      "organisation": "Organisation",
+      "organisations": "Organisations",
+      "associate": "Associate",
+      "associates": "Associates",
+      "members": "Members",
+      "direct": "Direct",
+      "info": "Info",
+      "information": "Information",
+      "note": "Notes",
+      "actor": "Actor",
+      "player": "Player",
+      "tag": "Tag",
+      "tags": "Tags",
+      "inventory":"Inventory",
+      "scene":"Scene",
+      "standard": "Standard"
+    },
+    "settings": {
+      "itemPricePath": {
+        "name": "Override Item Price Path",
+        "hint": "Path to item price value (e.g., 'system.price.value' for D&D5e). Leave blank to use detected system."
+      },
+      "itemDenominationPath": {
+        "name": "Override Item Currency Path",
+        "hint": "Path to item currency denomination (e.g., 'system.price.denomination' for D&D5e). Leave blank to use detected system."
+      },
+      "itemDenominationOverride": {
+        "name": "Override Denomination",
+        "hint": "Currency Denomination (e.g., credits, gp, units). Leave blank to use Item Currency Path or detected system. Campaign Codex will automatically detect the value and denomination for items based on the active game system (e.g., Dungeons and Dragons 5e, Pathfinder 2e, Starfinder, Savage Worlds Adventure Edition, Pathfinder 1e, Old-School Essentials and Daggerheart)."
+      },
+      "hideBaseCost": {
+        "name": "Hide the Base cost column",
+        "hint": "If you don't want the base cost visible, or the system doesn't have a price path you can set this to hide the column in the inventory tab. Close and reopen sheets to update."
+      },
+      "sortCardsAlpha": {
+        "name": "Automatically sort cards alphabetically",
+        "hint": "If On, cards will be displayed A-Z"
+      },
+      "runonlyonce": {
+        "name": "Welcome Message - Disabled",
+        "hint": "If On, you won't see the Welcome message"
+      },
+      "useOrganizedFolders": {
+        "name": "Organise in Folders",
+        "hint": "Automatically create and organise Campaign Codex journals in folders"
+      },
+      "hideByPermission": {
+        "name": "Hide Cards by ownership",
+        "hint": "Hide cards if the user does not have observer or higher ownership of the journal or item"
+      },
+      "hideInventoryByPermission":{
+        "name": "Hide Inventory Items by ownership",
+        "hint": "Hide Items in Inventories if the user does not have observer or higher ownership of the item"
+      },
+      "resetItemPathsButton": {
+        "name": "Reset Item Paths to Defaults",
+        "hint": "Enable this option and save to reset item price and currency paths to D&D5e defaults (system.price.value and system.price.denomination)"
+      }
+    },
+    "notifications": {
+      "itemPricePathsReset": "Item price paths reset to D&D5e defaults"
+    },
+    "dropzone": {
+      "location": "Drag {type} or scenes here to add them",
+      "shop": "Drag {type} journals here to add them",
+      "npc": "Drag {type} or Actors here to add them",
+      "associate": "Drag {type} or Actors here to create relationships",
+      "item": "Drag {type} here to add to inventory",
+      "generic": "Drag {type} here",
+      "link": "Drop {type} to link",
+      "empty": "Empty {type}"
+    },
+    "error": {
+      "faileditem": "Failed to transfer item"
+    },
+    "warn": {
+      "directly": "Cannot remove {type} directly",
+      "remove": "Remove {type}",
+      "invaliddrop":"No members with linked actors found to drop!",
+      "nonpcfound":"No NPCs available to drop to map!",
+      "actornotfound":"Linked actor not found!",
+      "failedtodrop":"Failed to drop NPC to map!",
+      "scenenotfound":"Could not find the dropped scene."
+    },
+    "message": {
+      "open": "Open {type}",
+      "unlink": "Unlink {type}",
+      "droptomap":"Drop {type} Members to Scene",
+      "drop":"Drop to Scene."
+    },
+    "title": {
+      "all":"All",
+      "open": {
+        "actor": "Open Actor Sheet",
+        "sheet": "Open Sheet"
+      },
+      "unlink": {
+        "actor": "Unlink Actor Sheet"
+      },
+      "sort": {
+        "alphabetically": "Sort Inventory Alphabetically"
+      },
+      "send": {
+        "player": "Send to Player",
+        "item": {
+          "player": "Send Item to Player Character",
+          "typetoplayer":"Sent {type} to {player}."
+        }
+      },
+      "remove": {
+        "item": "Remove Item",
+        "from": {
+          "group": "Remove from Group"
+        }
+      },
+      "focus": {
+        "in": {
+          "tab": "Focus in Tab"
+        }
+      }
+    },
+    "inventory": {
+      "added":"Added {type} to inventory",
+      "price": {
+        "name": "Price",
+        "base": "Base Price",
+        "final": "Final Price"
+      },
+      "quantity": "Quantity",
+      "actions": "Actions",
+      "item": {
+        "name": "Item Name"
+      },
+      "global": {
+        "markup": "Global Price Markup"
+      },
+      "help": {
+        "markup": "Items without custom prices will use base price × markup"
+      }
+    },
+    "ui": {
+      "addedto":"Added {type} to {typeb}",
+      "drag": {
+        "link": {
+          "journal": {
+            "standard": "Journal: Drag Standard Journal to link"
+          }
+        }
+      },
+      "warn": {
+        "notfound": {
+          "player": {
+            "character": "No player characters found"
+          }
+        }
+      },
+      "send": {
+        "item": {
+          "player": "Send <strong>{type}</strong> to which player character?"
+        }
+      },
+      "cancel": "Cancel"
+    }
+  }
 }
