--- a/lang/fr.json
+++ b/lang/fr.json
@@ -138,15 +138,15 @@
       "itemPricePathsReset": "Les chemins de prix des objets ont été réinitialisés aux valeurs par défaut de D&D5e."
     },
     "dropzone": {
-      "region": "Faites glisser {type} pour les ajouter",
-      "location": "Faites glisser des {type} ou des scènes ici pour les ajouter",
-      "shop": "Faites glisser des journaux {type} ici pour les ajouter",
-      "npc": "Faites glisser des {type} ou des Acteurs ici pour les ajouter",
-      "associate": "Faites glisser des {type} ou des Acteurs ici pour créer des relations",
-      "item": "Faites glisser {type} ici pour ajouter à l'inventaire",
-      "generic": "Faites glisser {type} ici",
-      "link": "Déposez {type} pour lier",
-      "empty": "Vider {type}"
+      "region": "Faites glisser pour ajouter ({type})",
+      "location": "Faites glisser ici pour ajouter ({type} ou scènes)",
+      "shop": "Faites glisser des journaux ici pour ajouter ({type})",
+      "npc": "Faites glisser ici pour ajouter ({type} ou Acteurs)",
+      "associate": "Faites glisser pour créer des relations ({type} ou Acteurs)",
+      "item": "Faites glisser ici pour ajouter à l'inventaire ({type})",
+      "generic": "Faites glisser ici ({type})",
+      "link": "Déposez pour lier ({type})",
+      "empty": "Aucun élément"
     },
     "error": {
       "faileditem": "Échec du transfert de l'objet"
