Add completed quests tab with sorting by name and pinned status
- Added new 'Completed Quests' tab to group sheets
- Modified quests tab to show only incomplete quests
- Both tabs sort quests: pinned first, then alphabetically by title
- Both tabs sort entities (locations, regions, shops, NPCs) alphabetically by name
- Added localization support in English, Spanish, and French

--- a/lang/en.json
+++ b/lang/en.json
@@ -84,6 +84,7 @@
       "standard": "Standard",
       "quest":"Quest",
       "quests":"Quests",
+      "completedquests":"Completed Quests",
       "toc":"Table of Contents",
       "widgets": "Widgets"
     },
