--- a/lang/es.json
+++ b/lang/es.json
@@ -70,6 +70,7 @@
       "standard": "Estándar",
       "quest": "Misión",
       "quests": "Misiones",
+      "completedquests": "Misiones Completadas",
       "toc": "Tabla de Contenidos"
     },
     "settings": {
