--- a/lang/fr.json
+++ b/lang/fr.json
@@ -70,6 +70,7 @@
       "standard": "Standard",
       "quest": "Quête",
       "quests": "Quêtes",
+      "completedquests": "Quêtes Terminées",
       "toc": "Table des Matières"
     },
     "settings": {
