Update French localization
Updated French localization

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -1,43 +1,55 @@
 {
   "CAMPAIGN_CODEX": {
-    "welcomePageHTML": "<div> <p><strong>Bienvenue dans Campaign Codex</strong></p> <p>La gestion des dossiers, l'emplacement du prix des objets du système, l'emplacement de la devise des objets du système et d'autres configurations peuvent être modifiés dans les paramètres.</p> <div><button data-campaign-codex-handler=\"campaign-codex|openMenu|core_settings\"><i class=\"fas fa-wrench\"></i>Paramètres</button></div> <hr> <p><strong>Rejoignez la communauté Campaign Codex</strong></p> <p>Si vous souhaitez suggérer une fonctionnalité, signaler un bug ou simplement discuter, n'hésitez pas à nous rejoindre sur Discord.</p> <div><button data-campaign-codex-handler=\"campaign-codex|openWindow|https://discord.gg/fycwH79s2y\"><i class=\"fab fa-discord\"></i> Rejoindre le Discord</button></div> <p><strong>Vous avez trouvé un bug ?</strong></p> <p>Si vous souhaitez signaler un bug et que Discord n'est pas votre tasse de thé, rendez-vous sur GitHub.</p> <div><button data-campaign-codex-handler=\"campaign-codex|openWindow|https://github.com/xthesaintx/cc13\"><i class=\"fas fa-bug\"></i> Signaler un bug</button></div> <p><strong>Soutenir le développement</strong></p> <p>Si vous souhaitez soutenir le développement, envisagez de jeter un œil aux options d'adhésion sur Patreon</a>.</p> <div><button data-campaign-codex-handler=\"campaign-codex|openWindow|https://patreon.com/wgtngm\"><i class=\"fas fa-star\"></i> Devenir membre</button></div><p><strong>Documentation</strong></p> <p>Vous vous sentez un peu perdu ? Consultez notre page de documentation pour trouver des indications, ou venez poser une question sur Discord</a>.</p> <div><button data-campaign-codex-handler=\"campaign-codex|openWindow|https://campaigncodex.wgtngm.com\"><i class=\"fas fa-book\"></i> Documentation</button></div></div>",
+    "welcomePageHTML": "<div> <p><strong>Bienvenue dans Campaign Codex</strong></p> <p>La gestion des dossiers, l'emplacement du prix et de la devise des objets du système, ainsi que d'autres configurations peuvent être modifiés dans les paramètres.</p> <div><button data-campaign-codex-handler=\"campaign-codex|openMenu|core_settings\"><i class=\"fas fa-wrench\"></i>Paramètres</button></div> <hr> <p><strong>Rejoignez la communauté Campaign Codex</strong></p> <p>Si vous souhaitez suggérer une fonctionnalité, signaler un bug, ou simplement discuter, n'hésitez pas à nous rejoindre sur Discord.</p> <div><button data-campaign-codex-handler=\"campaign-codex|openWindow|https://discord.gg/fycwH79s2y\"><i class=\"fab fa-discord\"></i> Rejoindre le Discord</button></div> <p><strong>Vous avez trouvé un bug ?</strong></p> <p>Si vous souhaitez signaler un bug et que Discord n'est pas votre truc, rendez-vous sur GitHub.</p> <div><button data-campaign-codex-handler=\"campaign-codex|openWindow|https://github.com/xthesaintx/cc13\"><i class=\"fas fa-bug\"></i> Signaler un bug</button></div> <p><strong>Soutenir le développement</strong></p> <p>Si vous souhaitez soutenir le développement, envisagez de jeter un œil aux options d'adhésion sur Patreon</a>.</p> <div><button data-campaign-codex-handler=\"campaign-codex|openWindow|https://patreon.com/wgtngm\"><i class=\"fas fa-star\"></i> Devenir membre</button></div><p><strong>Documentation</strong></p> <p>Vous vous sentez un peu perdu ? Rendez-vous sur notre page de documentation pour vous orienter, ou venez poser une question sur Discord</a>.</p> <div><button data-campaign-codex-handler=\"campaign-codex|openWindow|https://campaigncodex.wgtngm.com\"><i class=\"fas fa-book\"></i> Documentation</button></div></div>",
     "context": {
-      "export": "Exporter vers un Journal Standard",
-      "group": "Ajouter à {type}"
+      "export": "Exporter vers un Journal standard",
+      "group": "Ajouter au groupe : {type}"
+    },
+    "tabs": {
+      "original-name": "Nom original",
+      "override-name": "Nom de remplacement",
+      "visible": "Visible",
+      "edit-title": "Configurer les onglets",
+      "reset": "Rétablir les valeurs par défaut"
     },
     "button": {
-      "title": "Créer un(e) nouveau/nouvelle {type}",
-      "droptoscene": "Déposer {type} sur la scène actuelle",
-      "tagmode": "Mode Étiquette"
+      "title": "Créer : {type}",
+      "droptoscene": "Déposer sur la scène : {type}",
+      "tagmode": "Mode Tag"
     },
     "info": {
-      "automatically": "Les {type} sont automatiquement remplis à partir de toutes les {source}.",
+      "automatically": "Peuplement automatique ({type}) depuis : {source}.",
       "refresh": "Actualiser",
-      "linkfound": "Liaison de {type} existant.",
-      "newlink": "{type} créé et lié depuis la scène.",
-      "linked": "{type} lié"
+      "linkfound": "Liaison de l'existant : {type}.",
+      "newlink": "Élément créé et lié depuis la scène : {type}.",
+      "linked": "Liaison effectuée : {type}"
     },
     "sheet": {
-      "journal": "Journal de {type}"
+      "journal": "Journal : {type}"
     },
-    "add": "Ajouter {type}",
+    "add": "Ajouter : {type}",
     "group": {
-      "notfound": "L'élément que vous essayez d'ajouter n'a pas été trouvé.",
-      "self": "Un groupe ne peut pas être ajouté à lui-même.",
-      "expandAll": "Tout déplier",
-      "collapseAll": "Tout replier",
-      "toggleItems": "Masquer/Afficher les Objets de l'inventaire",
-      "toggleNPCs": "Masquer/Afficher les PNJs",
-      "toggleNPCTags": "Masquer/Afficher les étiquettes sur les PNJs",
-      "toggleTagMode": "Mode Arborescence d'étiquettes"
+      "notfound": "L'élément à ajouter est introuvable.",
+      "self": "Impossible d'ajouter un groupe à lui-même.",
+      "expandAll": "Tout développer",
+      "collapseAll": "Tout réduire",
+      "toggleRegions": "Masquer/Afficher : Régions",
+      "toggleShops": "Masquer/Afficher : Entrées",
+      "toggleLocations": "Masquer/Afficher : Lieux",
+      "toggleGroups": "Masquer/Afficher : Groupes",
+      "toggleItems": "Masquer/Afficher : Objets d'inventaire",
+      "toggleNPCs": "Masquer/Afficher : PNJ",
+      "toggleNPCTags": "Masquer/Afficher : Tags PNJ",
+      "toggleTagMode": "Mode Arborescence de Tags"
     },
     "member": {
-      "type": "Membre {type}"
+      "type": "Membre : {type}"
     },
     "heading": {
-      "in": "{type} dans {in}"
+      "in": "{type} ({in})"
     },
     "names": {
+      "widgets": "Widgets",
       "regionlocation": "Région ou Lieu",
       "location": "Lieu",
       "locations": "Lieux",
@@ -48,7 +60,7 @@
       "region": "Région",
       "regions": "Régions",
       "npc": "PNJ",
-      "npcs": "PNJs",
+      "npcs": "PNJ",
       "items": "Objets",
       "journal": "Journal",
       "journals": "Journaux",
@@ -63,58 +75,72 @@
       "note": "Notes",
       "actor": "Acteur",
       "player": "Joueur",
-      "tag": "Étiquette",
-      "tags": "Étiquettes",
+      "tag": "Tag",
+      "tags": "Tags",
       "inventory": "Inventaire",
+      "loot": "Butin",
       "scene": "Scène",
       "standard": "Standard",
       "quest": "Quête",
       "quests": "Quêtes",
-      "toc": "Table des Matières"
+      "toc": "Table des matières",
+      "widgets": "Widgets"
     },
     "settings": {
+      "mapMarkerColor": {
+        "name": "Utiliser la couleur de l'UI CC pour les marqueurs de carte",
+        "hint": "Si activé, les marqueurs de carte CC utiliseront la couleur de l'interface CC pour l'arrière-plan."
+      },
+      "mapMarkers": {
+        "name": "Activer les marqueurs de carte Campaign Codex",
+        "hint": "Si activé, les fiches CC dont le nom respecte le format (lettre optionnelle + 3 chiffres + lettre optionnelle) créeront un marqueur de carte personnalisé (ex: A13)."
+      },
+      "hideCCbutton": {
+        "name": "Masquer le bouton de scène CC",
+        "hint": "Masquer le bouton de scène CC pour les utilisateurs NON MJ."
+      },
       "useStyledTocButton": {
         "name": "Bouton TdM stylisé",
-        "hint": "Activer pour utiliser le thème de Campaign Codex pour le bouton de la Table des Matières dans les contrôles de la scène."
+        "hint": "Activer pour utiliser le thème Campaign Codex pour le bouton Table des Matières dans les contrôles de scène."
       },
       "colorPicker": {
-        "name": "Remplacer la couleur d'accentuation",
-        "hint": "Remplace la couleur d'accentuation du thème par défaut. Entrez un code hexadécimal comme #d4af37. Laissez vide pour restaurer la valeur par défaut."
+        "name": "Remplacement de la couleur d'accentuation",
+        "hint": "Remplace la couleur d'accentuation du thème par défaut. Entrez un code hexadécimal (ex: #d4af37). Laissez vide pour restaurer la valeur par défaut."
       },
       "showOnlyPinned": {
         "name": "Afficher uniquement les quêtes épinglées dans la TdM",
-        "hint": "Si cette case est cochée, la Table des Matières n'affichera que les quêtes marquées comme 'épinglées'."
+        "hint": "Si coché, la Table des Matières n'affichera que les quêtes marquées comme 'épinglées'."
       },
       "showStats": {
         "name": "Afficher les statistiques dans le menu",
-        "hint": "Affichera (#) à côté d'un élément de menu dans les fiches pour indiquer le nombre de chaque type, visible uniquement par le MJ."
+        "hint": "Affichera (#) à côté d'un élément de menu dans les fiches pour indiquer le nombre de chaque type (visible par le MJ uniquement)."
       },
       "roundFinalPrice": {
-        "name": "Arrondir le prix final à un nombre entier",
+        "name": "Arrondir le prix final à l'entier",
         "hint": "Arrondira le prix final d'un objet au nombre entier le plus proche."
       },
       "maxRegionDepth": {
         "name": "Remplacer la profondeur d'imbrication",
-        "hint": "Le nombre de niveaux de régions que vous pouvez créer. Par défaut 5, une valeur plus élevée consommera plus de ressources système."
+        "hint": "Le nombre de niveaux de régions que vous pouvez créer. Par défaut 5, une valeur plus élevée demandera plus de ressources système."
       },
       "itemPricePath": {
         "name": "Remplacer le chemin du prix de l'objet",
-        "hint": "Chemin vers la valeur du prix de l'objet (par ex. 'system.price.value' pour D&D5e). Laissez vide pour utiliser le système détecté."
+        "hint": "Chemin vers la valeur du prix de l'objet (ex: 'system.price.value' pour D&D5e). Laissez vide pour utiliser la détection système."
       },
       "itemDenominationPath": {
         "name": "Remplacer le chemin de la devise de l'objet",
-        "hint": "Chemin vers la dénomination de la devise de l'objet (par ex. 'system.price.denomination' pour D&D5e). Laissez vide pour utiliser le système détecté."
+        "hint": "Chemin vers la dénomination de la devise de l'objet (ex: 'system.price.denomination' pour D&D5e). Laissez vide pour utiliser la détection système."
       },
       "itemDenominationOverride": {
         "name": "Remplacer la dénomination",
-        "hint": "Dénomination de la devise (par ex. crédits, po, unités). Laissez vide pour utiliser le chemin de devise de l'objet ou le système détecté. Campaign Codex détectera automatiquement la valeur et la dénomination des objets en fonction du système de jeu actif (par ex. Dungeons and Dragons 5e, Pathfinder 2e, Starfinder, Savage Worlds Adventure Edition, Pathfinder 1e, Old-School Essentials et Daggerheart)."
+        "hint": "Dénomination de la devise (ex: crédits, po, unités). Laissez vide pour utiliser le chemin de devise ou la détection système. Campaign Codex détectera automatiquement la valeur et la devise selon le système de jeu actif."
       },
       "hideBaseCost": {
-        "name": "Masquer la colonne du coût de base",
-        "hint": "Si vous ne voulez pas que le coût de base soit visible, ou si le système n'a pas de chemin de prix, vous pouvez cocher cette case pour masquer la colonne dans l'onglet inventaire. Fermez et rouvrez les fiches pour mettre à jour."
+        "name": "Masquer la colonne Coût de base",
+        "hint": "Si vous ne voulez pas voir le coût de base, ou si le système n'a pas de chemin de prix, activez ceci pour masquer la colonne dans l'inventaire. Fermez et rouvrez les fiches pour mettre à jour."
       },
       "sortCardsAlpha": {
-        "name": "Trier automatiquement les cartes par ordre alphabétique",
+        "name": "Tri alphabétique automatique des cartes",
         "hint": "Si activé, les cartes seront affichées de A à Z."
       },
       "runonlyonce": {
@@ -123,90 +149,90 @@
       },
       "useOrganizedFolders": {
         "name": "Organiser dans des dossiers",
-        "hint": "Crée et organise automatiquement les journaux du Campaign Codex dans des dossiers."
+        "hint": "Créer et organiser automatiquement les journaux Campaign Codex dans des dossiers."
       },
       "hideByPermission": {
-        "name": "Masquer les cartes par propriété",
-        "hint": "Masque les cartes si l'utilisateur n'a pas au minimum la permission d'observateur sur le journal ou l'objet."
+        "name": "Masquer les cartes selon la propriété",
+        "hint": "Masquer les cartes si l'utilisateur n'a pas la permission Observateur ou supérieure sur le journal ou l'objet."
       },
       "hideInventoryByPermission": {
-        "name": "Masquer les objets de l'inventaire par propriété",
-        "hint": "Masque les objets dans les inventaires si l'utilisateur n'a pas au minimum la permission d'observateur sur l'objet."
+        "name": "Masquer l'inventaire selon la propriété",
+        "hint": "Masquer les objets dans les inventaires si l'utilisateur n'a pas la permission Observateur ou supérieure sur l'objet."
       },
       "resetItemPathsButton": {
-        "name": "Réinitialiser aux valeurs par défaut",
-        "hint": "Activez cette option et enregistrez pour réinitialiser les paramètres par défaut."
+        "name": "Rétablir les valeurs par défaut",
+        "hint": "Activez cette option et sauvegardez pour réinitialiser les paramètres par défaut."
       }
     },
     "notifications": {
-      "itemPricePathsReset": "Les chemins de prix des objets ont été réinitialisés aux valeurs par défaut de D&D5e."
+      "itemPricePathsReset": "Chemins de prix réinitialisés (Défaut D&D5e)."
     },
     "dropzone": {
-      "region": "Faites glisser pour ajouter ({type})",
-      "location": "Faites glisser ici pour ajouter ({type} ou scènes)",
-      "shop": "Faites glisser des journaux ici pour ajouter ({type})",
-      "npc": "Faites glisser ici pour ajouter ({type} ou Acteurs)",
-      "associate": "Faites glisser pour créer des relations ({type} ou Acteurs)",
-      "item": "Faites glisser ici pour ajouter à l'inventaire ({type})",
-      "generic": "Faites glisser ici ({type})",
-      "link": "Déposez pour lier ({type})",
-      "empty": "Aucun élément"
+      "region": "Glisser-déposer pour ajouter : {type}",
+      "location": "Glissez ici pour ajouter : Scènes ou {type}",
+      "shop": "Glissez ici pour ajouter : Journaux ({type})",
+      "npc": "Glissez ici pour ajouter : Acteurs ou {type}",
+      "associate": "Glissez ici pour lier : Acteurs ou {type}",
+      "item": "Glisser-déposer ici pour ajouter à l'inventaire : {type}",
+      "generic": "Déposer ici : {type}",
+      "link": "Déposer pour lier : {type}",
+      "empty": "Vide : {type}"
     },
     "error": {
       "faileditem": "Échec du transfert de l'objet"
     },
     "warn": {
-      "directly": "Impossible de supprimer {type} directement",
-      "remove": "Supprimer {type}",
-      "invaliddrop": "Aucun membre avec des acteurs liés trouvé à déposer !",
+      "directly": "Suppression directe impossible : {type}",
+      "remove": "Supprimer : {type}",
+      "invaliddrop": "Aucun membre avec acteur lié trouvé à déposer !",
       "nonpcfound": "Aucun PNJ disponible à déposer sur la carte !",
-      "actornotfound": "Acteur lié non trouvé !",
+      "actornotfound": "Acteur lié introuvable !",
       "failedtodrop": "Échec du dépôt du PNJ sur la carte !",
       "scenenotfound": "Impossible de trouver la scène déposée."
     },
     "message": {
-      "open": "Ouvrir {type}",
-      "unlink": "Délier {type}",
-      "droptomap": "Déposer les membres de {type} sur la Scène",
-      "drop": "Déposer sur la Scène."
+      "open": "Ouvrir : {type}",
+      "unlink": "Délier : {type}",
+      "droptomap": "Déposer les membres ({type}) sur la scène",
+      "drop": "Déposer sur la scène."
     },
     "title": {
       "all": "Tout",
       "open": {
-        "actor": "Ouvrir la Fiche d'Acteur",
-        "sheet": "Ouvrir la Fiche"
+        "actor": "Ouvrir la fiche d'acteur",
+        "sheet": "Ouvrir la fiche"
       },
       "unlink": {
-        "actor": "Délier la Fiche d'Acteur"
+        "actor": "Délier la fiche d'acteur"
       },
       "sort": {
-        "alphabetically": "Trier l'inventaire par ordre alphabétique"
+        "alphabetically": "Trier l'inventaire (A-Z)"
       },
       "send": {
-        "player": "Envoyer au Joueur",
+        "player": "Envoyer au joueur",
         "item": {
-          "player": "Envoyer l'objet au Personnage Joueur",
-          "typetoplayer": "{type} envoyé à {player}."
+          "player": "Envoyer l'objet au personnage joueur",
+          "typetoplayer": "Envoi confirmé ({player}) : {type}."
         }
       },
       "remove": {
-        "item": "Supprimer l'objet",
+        "item": "Retirer l'objet",
         "from": {
-          "group": "Retirer du Groupe"
+          "group": "Retirer du groupe"
         }
       },
       "focus": {
         "in": {
-          "tab": "Mettre au premier plan dans l'onglet"
+          "tab": "Focus dans l'onglet"
         }
       }
     },
     "inventory": {
-      "added": "{type} ajouté à l'inventaire",
+      "added": "Ajout à l'inventaire : {type}",
       "price": {
         "name": "Prix",
-        "base": "Prix de Base",
-        "final": "Prix Final"
+        "base": "Prix base",
+        "final": "Prix final"
       },
       "quantity": "Quantité",
       "actions": "Actions",
@@ -214,18 +240,18 @@
         "name": "Nom de l'objet"
       },
       "global": {
-        "markup": "Majoration de prix globale"
+        "markup": "Marge globale sur les prix"
       },
       "help": {
-        "markup": "Les objets sans prix personnalisé utiliseront le prix de base × majoration"
+        "markup": "Objets sans prix manuel : prix de base × marge"
       }
     },
     "ui": {
-      "addedto": "{type} ajouté à {typeb}",
+      "addedto": "Ajout vers {typeb} effectué : {type}",
       "drag": {
         "link": {
           "journal": {
-            "standard": "Journal : Faites glisser un journal standard pour le lier"
+            "standard": "Journal : Glisser un journal standard pour lier"
           }
         }
       },
@@ -238,10 +264,11 @@
       },
       "send": {
         "item": {
-          "player": "Envoyer <strong>{type}</strong> à quel personnage joueur ?"
+          "player": "Destinataire pour <strong>{type}</strong> :"
         }
       },
-      "cancel": "Annuler"
+      "cancel": "Annuler",
+      "Save": "Sauvegarder"
     }
   }
 }
